Fixed bug #50267 (get_browser(null) does not use HTTP_USER_AGENT)